<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dip"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:layout_margin="5dip"
        tools:context=".MainActivity" 
        />
    
    <Button
        android:layout_width="110dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="goToFacebook"
        android:text="@string/button_facebook" />
    
    <Button
        android:layout_width="110dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="goToTwitter"
        android:text="@string/button_twitter" />
    
    <Button
        android:layout_width="110dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="goToLinkedIn"
        android:text="@string/button_linkedin" />
        
    <Button
        android:layout_width="110dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="viewResume"
        android:text="@string/button_resume" />

</LinearLayout>
